--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Admin/consulta_materia_aprobadas_estudiantes.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Admin/consulta_materia_aprobadas_estudiantes.html.twig
@@ -19,9 +19,9 @@
               <input id="valida_{{ carrera.idCarrera }}" type="hidden" value="0">
               <div id="parametrosBusqueda_{{ carrera.idCarrera }}" class="col-lg-12">
                 <div class="col-lg-7" style="margin-bottom: 20px;">
-                  <div class="col-lg-1" style="padding-top: 5px;">Cédula:  </div>
-                  <div class="col-lg-3"><input type="text" id="ident_{{ carrera.idCarrera }}" maxlength="10" ></div>
-                  <div class="col-lg-4" style="padding-top: 5px;" id="txt_nombre_{{ carrera.idCarrera }}">&nbsp;</div>
+                  <div class="col-lg-4" style="padding-top: 7px; font-weight: bold;" id="txt_nombre_{{ carrera.idCarrera }}">&nbsp;</div>
+                  <div class="col-lg-1" style="padding-top: 7px;">Cédula:  </div>
+                  <div class="col-lg-3" style="padding-top: 5px;"><input type="text" id="ident_{{ carrera.idCarrera }}" maxlength="10" ></div>
                   <div class="col-lg-1"><button type="button" id="btn_buscar_{{ carrera.idCarrera }}" class="btn btn-primary" >Buscar</button></div>
                 </div>
                 <div class="col-lg-5" style="margin-bottom: 20px;">
@@ -85,7 +85,7 @@
     var materiasAprobadasEstudiantes;
     var materiasAprobadasEstudiantesChange;
 
-    $("#txt_nombre_"+carrera).html('Debe buscar un estudiante');
+    $("#txt_nombre_"+carrera).html('Debe buscar un estudiante.');
     if($('#valida_'+carrera).val() == "0")
     {
       $('#valida_'+carrera).val("1");
