--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Estudiantes/menu_estudiantes.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Estudiantes/menu_estudiantes.html.twig
@@ -10,7 +10,7 @@
                         <div class="panel-heading">
                             <div class="row">
                                 <div class="col-xs-3">
-                                    <i class="fa fa-file-o fa-5x"></i>
+                                    <i class="fa fa-graduation-cap fa-5x"></i>
                                 </div>
                                 <div class="col-xs-9 text-right">
                                     <div><h3>Matriculación</h3></div>
@@ -31,7 +31,7 @@
                         <div class="panel-heading">
                             <div class="row">
                                 <div class="col-xs-3">
-                                    <i class="fa fa-file-o fa-5x"></i>
+                                    <i class="fa fa-eraser fa-5x"></i>
                                 </div>
                                 <div class="col-xs-9 text-right">
                                     <div><h3>Anulación de Materias</h3></div>
@@ -75,7 +75,7 @@
                         <div class="panel-heading">
                             <div class="row">
                                 <div class="col-xs-3">
-                                    <i class="fa fa-table fa-5x"></i>
+                                    <i class="fa fa-edit fa-5x"></i>
                                 </div>
                                 <div class="col-xs-9 text-right">
                                     <div><h3>Consulta de Notas</h3></div>
@@ -97,7 +97,7 @@
                         <div class="panel-heading">
                             <div class="row">
                                 <div class="col-xs-3">
-                                    <i class="fa fa-table fa-5x"></i>
+                                    <i class="fa fa-calendar-minus-o fa-5x"></i>
                                 </div>
                                 <div class="col-xs-9 text-right">
                                     <div><h3>Horarios</h3></div>
