--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Estudiantes/menuderecho.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Estudiantes/menuderecho.html.twig
@@ -5,13 +5,13 @@
         
         <div class="panel-heading">
               <a href="{{path('estudiantes_matriculacion')}}" class="tip btn btn-warning btn-circle btn-xl">
-                <span>Matriculación</span><i class='fa fa-list' title="Anlación"></i>
+                <span>Matriculación</span><i class='fa fa-graduation-cap' title="Anlación"></i>
                  <!--  <div class='btn btn-warning btn-circle btn-xl' >
                         <i class='fa fa-list' title="Matriculación"></i>
                   </div> -->
              </a>
               <a href="{{path('estudiantes_anulacion')}}" class="tip btn btn-danger btn-circle btn-xl">
-                <span>Anulacion de Materias</span><i class='fa fa-list' title="Anlación"></i>
+                <span>Anulacion de Materias</span><i class='fa fa-eraser' title="Anlación"></i>
                  <!--  <div class='btn btn-danger btn-circle btn-xl ' >
                         <i class='fa fa-list' title="Anlación"></i>
                   </div> -->
@@ -22,13 +22,13 @@
                 </div>
              </a> -->
              <a  href="{{path('estudiantes_notas_actuales')}}" class="tip btn btn-info btn-circle btn-xl">
-                <span>Consulta de Notas</span><i class='fa fa-list' title="Anlación"></i>
+                <span>Consulta de Notas</span><i class='fa fa-edit' title="Anlación"></i>
                 <!-- <div class='btn btn-info btn-circle btn-xl' >
                         <i class='fa fa-table' title="Notas"></i>
                 </div> -->
              </a>
               <a  href="{{path('estudiantes_horarios')}}" class="tip btn btn-success btn-circle btn-xl">
-                <span>Horarios</span><i class='fa fa-list' title=""></i>
+                <span>Horarios</span><i class='fa fa-calendar-minus-o' title=""></i>
                 <!-- <div class='btn btn-info btn-circle btn-xl' >
                         <i class='fa fa-table' title="Notas"></i>
                 </div> -->
@@ -121,13 +121,13 @@
         
         <div class="panel-heading">
               <a href="{{path('estudiantes_matriculacion')}}" class="tip btn btn-warning btn-circle btn-xl">
-                <span>Matriculación</span><i class='fa fa-list' title=""></i>
+                <span>Matriculación</span><i class='fa fa-graduation-cap' title="Anlación"></i>
                  <!--  <div class='btn btn-warning btn-circle btn-xl' >
                         <i class='fa fa-list' title="Matriculación"></i>
                   </div> -->
              </a>
               <a href="{{path('estudiantes_anulacion')}}" class="tip btn btn-danger btn-circle btn-xl">
-                <span>Anulacion de Materias</span><i class='fa fa-list' title=""></i>
+                <span>Anulacion de Materias</span><i class='fa fa-eraser' title="Anlación"></i>
                  <!--  <div class='btn btn-danger btn-circle btn-xl ' >
                         <i class='fa fa-list' title="Anlación"></i>
                   </div> -->
@@ -138,13 +138,13 @@
                 </div>
              </a> -->
              <a  href="{{path('estudiantes_notas_actuales')}}" class="tip btn btn-info btn-circle btn-xl">
-                <span>Consulta de Notas</span><i class='fa fa-list' title=""></i>
+                <span>Consulta de Notas</span><i class='fa fa-edit' title="Anlación"></i>
                 <!-- <div class='btn btn-info btn-circle btn-xl' >
                         <i class='fa fa-table' title="Notas"></i>
                 </div> -->
              </a>
-             <a  href="{{path('estudiantes_horarios')}}" class="tip btn btn-success btn-circle btn-xl">
-                <span>Horarios</span><i class='fa fa-list' title=""></i>
+              <a  href="{{path('estudiantes_horarios')}}" class="tip btn btn-success btn-circle btn-xl">
+                <span>Horarios</span><i class='fa fa-calendar-minus-o' title=""></i>
                 <!-- <div class='btn btn-info btn-circle btn-xl' >
                         <i class='fa fa-table' title="Notas"></i>
                 </div> -->
