--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Docentes/tablaEstudiantes.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Docentes/tablaEstudiantes.html.twig
@@ -1,4 +1,23 @@
 
+
+
+<div class="row " style="padding-left: 25px;">
+                                    <div class="col-xs-4">
+                                        <label class="control-label" >Docente : </label>{{docente_text}}
+                                    </div>
+                                    <div class="col-xs-4">
+                                        <label>Materia : </label>{{materia_text}}
+                                    </div>
+                                    <div class="col-xs-2">
+                                        <label>Paralelo : </label>{{paralelo}}
+                                    </div>
+                                    <div class="col-xs-2">
+                                        <label>Fecha : </label>{{fecha}}
+                                    </div>
+                            </div>
+   <div class="col-xs-12" style="margin-bottom: 20px;">
+        &nbsp;
+    </div>
     <table class="table table-striped table-bordered table-hover" id="dataTables-example">
         <thead>
             <tr>
