--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Admin/link_cambio_clave.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Admin/link_cambio_clave.html.twig
@@ -18,7 +18,7 @@
 		Utilice esta contraseña <b>{{clave}}</b> para que pueda restaurarla.
 	</div>
 
-	<a href="http://localhost{{path('admin_academico_cambio_pass')}}" style="
+	<a href="{{app.request.getSchemeAndHttpHost()}}{{path('admin_academico_cambio_pass')}}" style="
 		position: relative;
 	    text-align: center;
 	    padding: 10px 0;
