--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Docentes/listadoCarreras.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Docentes/listadoCarreras.html.twig
@@ -29,6 +29,7 @@
                   <input id="nombreMateriaSeleccionada-Carrera_{{datosCarrera.id_sa_carrera}}" value="" type="hidden" >
                   <input id="inicioCiclo-Carrera_{{datosCarrera.id_sa_carrera}}" value="{{datosCarrera.fecha_inicio}}" type="hidden" >
                   <input id="finCiclo-Carrera_{{datosCarrera.id_sa_carrera}}" value="{{datosCarrera.fecha_fin}}" type="hidden" >
+                  <input id="idCiclo-Carrera_{{datosCarrera.id_sa_carrera}}" value="{{datosCarrera.id_sa_ciclo_detalle}}" type="hidden" >
                   <div id="panelCentralCarrera-{{datosCarrera.id_sa_carrera}}" class="panel panel-default">
                      <div class="panel-heading">
                         <h4 class="panel-title">
