--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Docentes/visionGeneralMateria.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Docentes/visionGeneralMateria.html.twig
@@ -7,7 +7,7 @@
 	<div class="col-lg-12">
 		<div class="panel panel-primary" style="border-radius: 0px;">
 		<div class="panel-heading" style="border-radius: 0px;">
-			VISIÓN GENERAL - INGENIERIA DE SOFTWARE
+			VISIÓN GENERAL - {{datosMateria.nombreMateriaTitulo}}
 		</div>
 		<!-- /.panel-heading -->
 		<div class="panel-body">
